--- a/FRONTEND/src/assets/css/mycss.css
+++ b/FRONTEND/src/assets/css/mycss.css
@@ -41,7 +41,7 @@ main {
     border-radius: 10px;
     transition: all ease-in 0.2s;
     cursor: pointer;
-    font-size: initial;
+    font-size: inherit;
 }
 
 .btn_regular:hover {
@@ -51,7 +51,8 @@ main {
 
 .link {
     text-decoration: none;
-    color: black;
+    /* color: black; */
+    color: inherit;
 }
 
 /* Coloring */
@@ -111,8 +112,8 @@ main {
 .header_logo {
     background-color: var(--color_mid);
     border-radius: 100%;
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
 }
 
 .header_title {
@@ -143,7 +144,7 @@ main {
     /* justify-content: center; */
     flex-direction: column;
     align-items: center;
-    padding-bottom: 10px;
+    padding: 20px 0;
 }
 
 .footer_menu {
@@ -166,3 +167,69 @@ main {
     margin: 10px;
     gap: 10px;
 }
+
+.footer_logo {
+    background-color: var(--color_mid);
+    border-radius: 100%;
+    width: 50px;
+    height: 50px;
+}
+
+/* Forms */
+
+.form_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px 0 20px 0;
+}
+
+.form {
+    box-sizing: border-box;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    width: 60%;
+    gap: 10px;
+}
+
+.form_title {
+    font-size: 25px;
+    font-weight: 600;
+    border-radius: 5px;
+    padding: 5px;
+    width: 100%;
+    text-align: center;
+}
+
+.form_input_group {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+
+.form_group {
+    display: flex;
+    float: left;
+    gap: 20px;
+    width: 100%;
+}
+
+.form_input {
+    padding: 10px;
+    border-radius: 5px;
+    background-color: white;
+    outline: none;
+    border: none;
+    transition: all ease-in 0.3s;
+    font-size: initial;
+}
+
+.form_input:focus {
+    scale: 1.01;
+}
+
+/* Planning */
