--- a/FRONTEND/src/assets/css/mycss.css
+++ b/FRONTEND/src/assets/css/mycss.css
@@ -6,6 +6,12 @@
     --color_dark: #103140;
     --red: #FF2E2E;
     --yellow: #FFEE53;
+    --color_grey_light: #b3bcc0;
+    --color_grey_medium: #6f7477;
+    --color_grey_dark: #343536;
+
+    --planning_hour_height: 40px;
+    --planning_hour_amount: 12;
     font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
     font-size: 18px;
 }
@@ -233,3 +239,86 @@ main {
 }
 
 /* Planning */
+
+.planning {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    width: 95%;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+.planning_cont {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    margin: 20px 0 20px 0;
+}
+
+.planning_grid {
+    display: grid;
+    grid-template-columns: 50px repeat(5, 1fr);
+    grid-template-rows: repeat(13, 1fr);
+    height: 95%;
+}
+
+.planning_hour_cont {
+    display: grid;
+    grid-template-rows: 70px repeat(var(--planning_hour_amount), var(--planning_hour_height));
+    margin-right: 5px;
+}
+
+.planning_day_cont {
+    display: grid;
+    grid-column: 2;
+    gap: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
+
+.planning_day {
+    display: grid;
+    grid-template-rows: 70px repeat(var(--planning_hour_amount), var(--planning_hour_height));
+    border-radius: 5px;
+    position: relative;
+    padding-bottom: 10px;
+}
+
+.planning_day_title {
+    /* padding: 10px; */
+    border-radius: 10px;
+    text-align: center;
+    box-sizing: border-box;
+    margin: 5px;
+}
+
+.planning_reservation_cont {
+    position: absolute;
+    grid-row-start: 3;
+    grid-row-end: 14;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: repeat(calc(var(--planning_hour_amount) - 3), var(--planning_hour_height));
+}
+
+.restest {
+    grid-row-start: 4;
+    grid-row-end: 5;
+    background-color: red;
+    margin: 0 5px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 80%;
+    overflow: scroll;
+}
+
+.border_bottom {
+    border-bottom: #30E5C4 solid 1px;
+}
+
+/* times */
+
+.start_at_8 {
+    grid-row-start: 1;
+}
