--- a/FRONTEND/src/assets/css/mycss.css
+++ b/FRONTEND/src/assets/css/mycss.css
@@ -370,6 +370,8 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
+    user-select: none;
 }
 
 .calendar_cont {
