Construction du hook pour réservation
- Ajout de route dans le backend pour trouver les réservations par user_id
- Ajout de ResDayEvent qui montre en détail le jour sélectionné sur le calendrier (fonctionne, pas encore de lien backend)
- Ajout de contenu dans ReservContext (WIP)
- Ajout de getresbyid & getresbydate dans services/api.js
- GenerateActiveTrack (util func) maintenant donne aussi le jour
- Ajout de useReserv (WIP)

--- a/FRONTEND/src/assets/css/mycss.css
+++ b/FRONTEND/src/assets/css/mycss.css
@@ -378,3 +378,11 @@ main {
     padding: 10px;
     border-radius: 10px;
 }
+
+.day_planning {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    min-width: 250px;
+    padding: 10px;
+    box-sizing: border-box;
+}
