Ajout simple hook pour les réservations
- Tentative d'ajout de hook pour les réservations en se basant sur le modèle Auth mais trop global (commit ici pour garder en mémoire)
- Ajout de useReservation pour communiquer avec la base et obtenir les données de réservations
- Ajout d'une route api pour obtenir les infos d'un utilisateur par id
- Page Reservation : peut maintenant utiliser le hook useReservation pour obtenir les réservations par date
- DOIT AJOUTER: route pour obtenir un array de réservations sur une plage de dates (de date à date) pour le planning + méthode pour obtenir les données utilisateurs (nom prénom) pour les ajouter aux réservations

--- a/FRONTEND/src/assets/css/mycss.css
+++ b/FRONTEND/src/assets/css/mycss.css
@@ -284,6 +284,11 @@ main {
     margin-right: 5px;
 }
 
+.planning_hour {
+    display: flex;
+    align-self: flex-end;
+}
+
 .planning_day_cont {
     display: grid;
     grid-column: 2;
@@ -328,8 +333,21 @@ main {
     overflow: scroll;
 }
 
+.res {
+    background-color: var(--red);
+    margin: 0 5px;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 80%;
+    overflow: scroll;
+}
+
 .border_bottom {
     border-bottom: #30E5C4 solid 1px;
+}
+
+.border_top {
+    border-top: #30E5C4 solid 1px;
 }
 
 /* times */
