Formulaire de réservation fonctionnel
- Le calendrier a maintenant des input pour l'heure de début et l'heure de fin d'une réservation
- Les heures des inputs respectent les limites (de 8h à 19h)
- Une preview de la réservation s'affiche sur la vue des réservations du jour lorsqu'une date est sélectionnée
- La preview se met à jour en direct avec les inputs heures et objet
- BUG: les noms user ne s'affichent pas correctement, n'affiche pas toujours le nom d'user correct.

--- a/FRONTEND/src/assets/css/mycss.css
+++ b/FRONTEND/src/assets/css/mycss.css
@@ -213,6 +213,7 @@ main {
     align-items: center;
     padding: 20px;
     width: 60%;
+    min-width: 605px;
     gap: 10px;
 }
 
@@ -319,7 +320,17 @@ main {
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-rows: repeat(calc(var(--planning_hour_amount) - 3), var(--planning_hour_height));
+    grid-template-rows: repeat(calc(var(--planning_hour_amount) - 2), var(--planning_hour_height));
+}
+
+.planning_preview_cont {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-row-start: 1;
+    grid-row-end: 12;
+    grid-template-rows: repeat(calc(var(--planning_hour_amount) - 2), var(--planning_hour_height));
 }
 
 .restest {
@@ -334,7 +345,7 @@ main {
 }
 
 .res {
-    background-color: var(--red);
+    /* background-color: var(--red); */
     margin: 0 5px;
     border-radius: 5px;
     text-align: center;
